force-app/main/default/objects/sked__Resource_Shift_Offer__c/sked__Resource_Shift_Offer__c.object-meta.xml
<CustomObject>
    <description>An offer made to a single resource for one or more shifts</description>
    <label>Resource Shift Offer</label>
    <nameField>
        <displayFormat>RSO-{00000}</displayFormat>
        <label>Resource Shift Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Shift Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>