force-app/main/default/objects/sked__Resource_Shift_Offer__c/fields/sked__Response__c.field-meta.xml
<CustomField>
    <fullName>sked__Response__c</fullName>
    <description>The response received from a resource in relation to an offer of work</description>
    <label>Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>