force-app/main/default/objects/sked__Resource_Shift_Offer__c/fields/sked__Shift_Offer__c.field-meta.xml
<CustomField>
    <fullName>sked__Shift_Offer__c</fullName>
    <description>The parent shift offer</description>
    <label>Shift Offer</label>
    <referenceTo>sked__Shift_Offer__c</referenceTo>
    <relationshipLabel>Resource Shift Offers</relationshipLabel>
    <relationshipName>Resource_Shift_Offers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>