force-app/main/default/objects/sked__Resource_Shift_Offer__c/fields/sked__Status__c.field-meta.xml
<CustomField>
    <fullName>sked__Status__c</fullName>
    <description>The status of the offer in relation to this resource</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>OfferFilled</fullName>
            </value>
            <value>
                <fullName>OfferCancelled</fullName>
            </value>
            <value>
                <fullName>ResourceOfferCancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>