force-app/main/default/objects/sked__Resource_Shift_Offer__c/fields/sked__Time_Responded__c.field-meta.xml
<CustomField>
    <fullName>sked__Time_Responded__c</fullName>
    <description>The time at which the response was received from the resource</description>
    <label>Time Responded</label>
    <type>DateTime</type>
</CustomField>